--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/mologuy/mc-node/issues"
   },
-  "homepage": "https://github.com/mologuy/mc-node#readme"
+  "homepage": "https://github.com/mologuy/mc-node#readme",
+  "dependencies": {
+    "axios": "^0.21.1",
+    "child_process": "^1.0.2",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7"
+  }
 }
