--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "node app.js",
-    "postinstall": "node bin/postinstall.js"
+    "postinstall": "node bin/postinstall.js",
+    "deploy": "pm2 start ecosystem.config.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
     "child_process": "^1.0.2",
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
-    "pm2": "^5.1.1"
+    "pm2": "^5.1.1",
+    "readline": "^1.3.0"
   }
 }
