--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "node app.js",
     "postinstall": "node bin/postinstall.js",
-    "deploy": "npm install && pm2 start ecosystem.config.js"
+    "deploy": "npm install && pm2 start ecosystem.config.js",
+    "stop": "pm2 stop ecosystem.config.js"
   },
   "repository": {
     "type": "git",
