--- a/bin/default.config.json
+++ b/bin/default.config.json
@@ -2,14 +2,17 @@
   "apps" : [{
     "name"   : "mc-server",
     "script" : "./app.js",
-    "version": "1.0.0",
     "treekill": false,
     "wait_ready": true,
-    "listen_timeout": 30000,
+    "listen_timeout": 60000,
     "kill_timeout": 6000,
     "env": {
       "STOP_TIMEOUT": 5000,
-      "MAX_HEAP_SIZE":  3000
+      "MAX_HEAP_SIZE":  1024,
+      "INIT_HEAP_SIZE": 1024,
+      "VERSION": "1.0.0",
+      "MC_SERVER_FILENAME": "server.jar",
+      "MC_VERSION": "latest"
     }
   }]
 }
