--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
     "pm2": "^5.1.1",
-    "readline": "^1.3.0"
+    "readline": "^1.3.0",
+    "socket.io": "^4.2.0"
   }
 }
