--- a/bin/default.config.json
+++ b/bin/default.config.json
@@ -12,7 +12,8 @@
       "INIT_HEAP_SIZE": 1024,
       "VERSION": "1.0.0",
       "MC_SERVER_FILENAME": "server.jar",
-      "MC_VERSION": "latest"
+      "MC_VERSION": "latest",
+      "SOCKET_PORT": 3000
     }
   }]
 }
