--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pm2": "^5.1.1",
     "readline": "^1.3.0",
     "socket.io": "^4.2.0",
+    "socket.io-client": "^4.2.0",
     "ws": "^7.4.6"
   }
 }
