--- a/bin/default.config.json
+++ b/bin/default.config.json
@@ -14,7 +14,8 @@
       "VERSION": "1.0.0",
       "MC_SERVER_FILENAME": "server.jar",
       "MC_VERSION": "latest",
-      "SOCKET_PORT": 3000
+      "DISCORD_HOSTNAME": "localhost",
+      "DISCORD_PORT": 3000
     }
   }]
 }
