changed from socketio client to server (oops)

--- a/bin/default.config.json
+++ b/bin/default.config.json
@@ -15,7 +15,8 @@
       "MC_SERVER_FILENAME": "server.jar",
       "MC_VERSION": "latest",
       "DISCORD_HOSTNAME": "localhost",
-      "DISCORD_PORT": 3000
+      "DISCORD_PORT": 3000,
+      "SOCKET_PORT": 3000
     }
   }]
 }
